# bittbridge_jvf12001

./: .gitignore  main.py  model_params.yaml  pyproject.toml  requirements.txt
best_model_artifacts/: lstm_input_scaler.joblib  manifest.json  model.h5  model.keras
local_research/: analyze_search.py  final_train.py  get_local_data.py  optuna_overnight.db  requirements_dev.txt  tuning.py
local_research/db_files_csv/: alembic_version.csv  studies.csv  study_directions.csv  study_system_attributes.csv  study_user_attributes.csv  trial_heartbeats.csv  trial_intermediate_values.csv  trial_params.csv  trial_system_attributes.csv  trial_user_attributes.csv  trial_values.csv  trials.csv  version_info.csv
miner_model_energy/: features.py  ml_config.py
miner_model_energy/cache/: manifest.json
neurons/: miner.py
